--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="slay">
+      <div class="name">
+        <p> Заббарова Аделя</p>
+      </div>
+      <img src="picture/enot.jpg" width="50" height="50">
+    </div>
+
 </body>
 </html>
