--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -10,8 +11,9 @@
       <div class="name">
         <p> Заббарова Аделя</p>
       </div>
-      <img src="picture/enot.jpg" width="50" height="50">
+      <img src="picture/enot.jpg" width="100" height="100">
     </div>
+    
 
 </body>
 </html>
