--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <div class="name">
         <p> Заббарова Аделя</p>
       </div>
+      <div class="enot">
       <img src="picture/enot.jpg" width="100" height="100">
+    </div>
     </div>
     
 
