--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
       <div class="name">
         <p> Заббарова Аделя</p>
       </div>
-      <div class="enot">
-      <img src="picture/enot.jpg" width="100" height="100">
-    </div>
+
+      <img class="enot" src="picture/enot.jpg" width="100" height="100">
     </div>
     
 
