--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 <body>
     <div class="slay">
       <div class="name">
-        <p> Заббарова Аделя</p>
+        <h1> Заббарова Аделя</h1>
       </div>
-
       <img class="enot" src="picture/enot.jpg" width="100" height="100">
     </div>
-    
+    <div class="my">
+        <h1> Я умею </h1>
+        <li>Проходить  duolingo </li>
+        <li> Я умею быстро понимать информацию, <br /> если она написана доступным языком</li>
+        <li>Быстро читать книги</li>
+        <li>Находить мотивацию делать что-либо, если будет какая либо награда</li>
+    </div>
 
 </body>
 </html>
