--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li>Проходить  duolingo </li>
         <li> Я умею быстро понимать информацию, <br /> если она написана доступным языком</li>
         <li>Быстро читать книги</li>
-        <li>Находить мотивацию делать что-либо, если будет какая либо награда</li>
+        <li>Находить мотивацию делать что-либо, <br /> если будет какая либо награда</li>
     </div>
 
 </body>
