--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <li>Быстро читать книги</li>
         <li>Находить мотивацию делать что-либо, <br /> если будет какая либо награда</li>
     </div>
-
+    <div class="my2">
+        <img src="picture/omg.jpg" width="300" height="150">
+        <div class="t">
+            <p>Работа которую я могу заверстать, <br /> но мне лень</p>
+        </div>
+    </div>
 </body>
 </html>
