--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
             <p>Работа которую я могу заверстать, <br /> но мне лень</p>
         </div>
     </div>
+    <div class="icons">
+        <p><a href=" https://discordapp.com/users/764529447130497034/"><img src="picture/Discor.png"  width="30" height="30"></a></p> 
+        <p><a href="www.pinterest.com/adelazabbarova"> <img src="picture/Pinterest.png" width="30" height="30"></a></p>
+        <p><a href="https://github.com/vechhh"> <img src="picture/Github.png" width="30" height="30"></a></p>
+     </div>
 </body>
 </html>
