--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="icons">
         <p><a href=" https://discordapp.com/users/764529447130497034/"><img src="picture/Discor.png"  width="30" height="30"></a></p> 
-        <p><a href="www.pinterest.com/adelazabbarova"> <img src="picture/Pinterest.png" width="30" height="30"></a></p>
+        <p><a href="https://ru.pinterest.com/adelazabbarova/"> <img src="picture/Pinterest.png" width="30" height="30"></a></p>
         <p><a href="https://github.com/vechhh"> <img src="picture/Github.png" width="30" height="30"></a></p>
      </div>
 </body>
