--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="slay">
       <div class="name">
         <h1> Заббарова Аделя</h1>
+        <p>Исдо-14</p>
       </div>
       <img class="enot" src="picture/enot.jpg" width="100" height="100">
     </div>
