--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <li>Находить мотивацию делать что-либо, <br /> если будет какая либо награда</li>
     </div>
     <div class="my2">
+        <div class="omg"></div>
+        <img src="picture/om.jpg" width="300" height="150" >
         <img src="picture/omg.jpg" width="300" height="150">
+        <img src="picture/o.jpg" width="300" height="150">
+    </div>
         <div class="t">
             <p>Работа которую я могу заверстать, <br /> но мне лень</p>
         </div>
