--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
         <li>Находить мотивацию делать что-либо, <br /> если будет какая либо награда</li>
     </div>
     <div class="my2">
-        <div class="omg"></div>
+        <div class="omg">
         <img src="picture/om.jpg" width="300" height="150" >
         <img src="picture/omg.jpg" width="300" height="150">
         <img src="picture/o.jpg" width="300" height="150">
     </div>
+</div>
         <div class="t">
             <p>Работа которую я могу заверстать, <br /> но мне лень</p>
         </div>
