--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <img class="enot" src="picture/enot.jpg" width="100" height="100">
     </div>
     <div class="my">
+        <div class="o">
+            <img src="picture/vot.png" width="300" height="150">
+        </div>
         <h1> Я умею </h1>
         <li>Проходить  duolingo </li>
         <li> Я умею быстро понимать информацию, <br /> если она написана доступным языком</li>
