--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
       </div>
       <img class="enot" src="picture/enot.jpg" width="100" height="100">
     </div>
+    <div class="o1">
+    <div class="o">
+        <img src="picture/vot.png" width="300" height="150">
+    </div>
     <div class="my">
-        <div class="o">
-            <img src="picture/vot.png" width="300" height="150">
-        </div>
         <h1> Я умею </h1>
         <li>Проходить  duolingo </li>
         <li> Я умею быстро понимать информацию, <br /> если она написана доступным языком</li>
         <li>Быстро читать книги</li>
         <li>Находить мотивацию делать что-либо, <br /> если будет какая либо награда</li>
     </div>
+</div>
     <div class="my2">
         <div class="omg">
         <img src="picture/om.jpg" width="300" height="150" >
