--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="slay">
       <div class="name">
-        <h1> Заббарова Аделя</h1>
-        <p>Исдо-24</p>
+        <h1><span class="t1"> Заббарова Аделя</span></h1>
+        <p><span class="t2">Исдо-24</span></p>
       </div>
       <img class="enot" src="picture/enot.jpg" width="100" height="100">
     </div>
@@ -19,11 +19,11 @@
         <img src="picture/vot.png" width="300" height="150">
     </div>
     <div class="my">
-        <h1> Я умею </h1>
-        <li>Проходить  duolingo </li>
-        <li> Я умею быстро понимать информацию, <br /> если она написана доступным языком</li>
-        <li>Быстро читать книги</li>
-        <li>Находить мотивацию делать что-либо, <br /> если будет какая либо награда</li>
+        <h1><span class="t3">Я умею</span> </h1>
+        <li><span class="t4">Проходить  duolingo</span> </li>
+        <li><span class="t4">Я умею быстро понимать информацию, <br /> если она написана доступным языком</span></li>
+        <li><span class="t4">Быстро читать книги</span></li>
+        <li><span class="t4">Находить мотивацию делать что-либо, <br /> если будет какая либо награда</span></li>
     </div>
 </div>
     <div class="my2">
@@ -34,7 +34,7 @@
     </div>
 </div>
         <div class="t">
-            <p>Работа которую я могу заверстать, <br /> но мне лень</p>
+            <p><span class="t4">Работа которую я могу заверстать, <br /> но мне лень</span></p>
         </div>
     </div>
     <div class="icons">
