--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="slay">
       <div class="name">
         <h1><span class="t1"> Заббарова Аделя</span></h1>
+        <div class="color">
         <p><span class="t2">Исдо-24</span></p>
+    </div>
       </div>
       <img class="enot" src="picture/enot.jpg" width="100" height="100">
     </div>
@@ -20,10 +22,10 @@
     </div>
     <div class="my">
         <h1><span class="t3">Я умею</span> </h1>
-        <li><span class="t4">Проходить  duolingo</span> </li>
-        <li><span class="t4">Я умею быстро понимать информацию, <br /> если она написана доступным языком</span></li>
-        <li><span class="t4">Быстро читать книги</span></li>
-        <li><span class="t4">Находить мотивацию делать что-либо, <br /> если будет какая либо награда</span></li>
+        <li>Проходить  duolingo </li>
+        <li>Я умею быстро понимать информацию, <br /> если она написана доступным языком</li>
+        <li>Быстро читать книги</li>
+        <li>Находить мотивацию делать что-либо, <br /> если будет какая либо награда</li>
     </div>
 </div>
     <div class="my2">
@@ -34,7 +36,7 @@
     </div>
 </div>
         <div class="t">
-            <p><span class="t4">Работа которую я могу заверстать, <br /> но мне лень</span></p>
+            <p><span class="t2">Работа которую я могу заверстать, <br /> но мне лень</span></p>
         </div>
     </div>
     <div class="icons">
