--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
         <div class="t">
-            <p><span class="t2">Работа которую я могу заверстать, <br /> но мне лень</span></p>
+            <p><span class="t2">Работа которую я могу заверстать, но мне лень</span></p>
         </div>
     </div>
     </div>
